[package]
name = "great-tokenizer"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A tokenizer"
homepage = "https://docs.rs/great-tokenizer/latest/great_tokenizer/"
documentation = "https://docs.rs/great-tokenizer/latest/great_tokenizer/"
repository = "https://github.com/daiyan1145/tokenizer"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace", "std"] }
derive_more = { version = "1.0.0", features = ["full"] }
regex = "1.10.6"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
thiserror = "1.0.63"
unicode-segmentation = "1.11.0"
